# Daneshkar_SocialNetowork

./: pyproject.toml
socialnetwork/: db.sqlite3
socialnetwork/core/: views.py
socialnetwork/core/templates/: base.html  home.html  navbar.html
socialnetwork/media/profile_images/: 76188c72-ba88-4db3-9d47-c16bd608c7d6.jfif
socialnetwork/socialnetwork/: settings.py  urls.py
socialnetwork/static/font/: style.css
socialnetwork/users/: apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
socialnetwork/users/migrations/: 0001_initial.py  0002_remove_profile_profile_picture.py  0003_profile_bio_alter_profile_user.py  0004_post.py  0005_alter_post_content_alter_profile_user.py  0006_alter_profile_profile_image_alter_profile_user.py  0007_alter_profile_profile_image.py  0008_comment.py  0009_alter_post_content.py  0010_reaction.py  0011_follow.py  0012_tag_post_tags.py  0013_alter_post_tags.py  0014_followtag.py
socialnetwork/users/templates/: followed_tags_posts.html  followings.html  login.html  post_detail.html  profile.html  search.html  signup.html  tag_posts.html  user_profile.html  write.html
