[tool.poetry]
name = "django-social-network"
version = "0.1.0"
description = "Django_Social_Network_Project_For_Daneshkar_By_SeyedAliTabatabaei"
authors = ["sinatb <seyedalitabatabaeishere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
